# gluten2

./: .gitignore  pom.xml
backends-clickhouse/src/main/delta-20/org/apache/spark/sql/delta/commands/: OptimizeTableCommandBase.scala  OptimizeTableCommandOverwrites.scala  VacuumCommand.scala
backends-clickhouse/src/main/delta-22/org/apache/spark/sql/delta/commands/: OptimizeTableCommand.scala  OptimizeTableCommandOverwrites.scala  VacuumCommand.scala
backends-clickhouse/src/main/java/org/apache/spark/sql/execution/datasources/: CHDatasourceJniWrapper.java
backends-clickhouse/src/main/scala/io/glutenproject/backendsapi/clickhouse/: CHIteratorApi.scala  CHSparkPlanExecApi.scala
backends-clickhouse/src/main/scala/org/apache/spark/sql/delta/: ClickhouseOptimisticTransaction.scala
backends-clickhouse/src/main/scala/org/apache/spark/sql/delta/catalog/: ClickHouseTableV2.scala
backends-clickhouse/src/main/scala/org/apache/spark/sql/execution/datasources/utils/: MergeTreePartsPartitionsUtil.scala
backends-clickhouse/src/main/scala/org/apache/spark/sql/execution/datasources/v1/: CHBlockStripes.java  CHMergeTreeWriterInjects.scala  CHParquetWriterInjects.scala
backends-clickhouse/src/main/scala/org/apache/spark/sql/execution/datasources/v1/clickhouse/: MergeTreeFileFormatWriter.scala
backends-clickhouse/src/main/scala/org/apache/spark/sql/execution/joins/: ClickHouseBuildSideRelation.scala
backends-clickhouse/src/main/scala/org/apache/spark/sql/execution/utils/: CHExecUtil.scala
backends-clickhouse/src/test/scala/io/glutenproject/execution/: GlutenClickHouseHiveTableSuite.scala  GlutenClickHouseMergeTreeOptimizeSuite.scala  GlutenClickHouseMergeTreeWriteSuite.scala  GlutenClickHouseTPCHBucketSuite.scala  GlutenClickHouseTPCHNotNullSkipIndexSuite.scala  GlutenClickHouseTPCHNullableSkipIndexSuite.scala  GlutenClickHouseWriteParquetTableSuite.scala
cpp-ch/local-engine/: CMakeLists.txt  local_engine_jni.cpp
cpp-ch/local-engine/Common/: MergeTreeTool.cpp  MergeTreeTool.h
cpp-ch/local-engine/Parser/: CHColumnToSparkRow.cpp  CHColumnToSparkRow.h  MergeTreeRelParser.cpp  MergeTreeRelParser.h  RelParser.cpp  RelParser.h  SerializedPlanParser.cpp
cpp-ch/local-engine/Storages/Output/: BlockStripeSplitter.cpp  FileWriterWrappers.cpp  FileWriterWrappers.h  OutputFormatFile.cpp  OutputFormatFile.h  ParquetOutputFormatFile.cpp  ParquetOutputFormatFile.h
cpp-ch/local-engine/Storages/SubstraitSource/: SubstraitFileSource.cpp
cpp-ch/local-engine/contrib/: CMakeLists.txt  README.md
cpp-ch/local-engine/contrib/folly-cmake/: CMakeLists.txt
cpp-ch/local-engine/contrib/folly/workaround/linux/: sockios.h
cpp-ch/local-engine/contrib/folly/workaround/netinet/: udp.h
cpp-ch/local-engine/contrib/libevent-cmake/: CMakeLists.txt
cpp-ch/local-engine/contrib/velox-cmake/: CMakeLists.txt
cpp-ch/local-engine/contrib/velox-cmake/cmake/: FindBoost.cmake  FindDoubleConversion.cmake  FindFmt.cmake  FindLibEvent.cmake  FindLibUring.cmake  FindOpenSSL.cmake
cpp-ch/local-engine/contrib/xsimd-cmake/: CMakeLists.txt
cpp-ch/local-engine/dwio/: CMakeLists.txt
cpp-ch/local-engine/dwio/example/: parquet_read.cpp  xsimd.cpp
gluten-core/src/main/java/io/glutenproject/substrait/rel/: ExtensionTableBuilder.java  ExtensionTableNode.java
gluten-core/src/main/scala/io/glutenproject/backendsapi/: SparkPlanExecApi.scala
gluten-core/src/main/scala/io/glutenproject/execution/: SortExecTransformer.scala  TakeOrderedAndProjectExecTransformer.scala  WholeStageTransformer.scala
gluten-core/src/main/scala/io/glutenproject/utils/: QueryPlanSelector.scala
gluten-core/src/main/scala/org/apache/spark/sql/execution/datasources/: GlutenParquetWriterInjectsBase.scala  GlutenWriterColumnarRules.scala
shims/common/: pom.xml
shims/common/src/main/scala/io/glutenproject/: GlutenConfig.scala
shims/common/src/main/scala/io/glutenproject/execution/datasource/: GlutenParquetWriterInjects.scala
shims/common/src/main/scala/org/apache/spark/sql/execution/datasources/: BasicWriteStatsTracker.scala  BlockStripe.java  BlockStripes.java  FileFormatDataWriter.scala  FileFormatWriter.scala
shims/common/src/main/scala/org/apache/spark/sql/execution/datasources/parquet/: ParquetFileFormat.scala
shims/common/src/main/scala/org/apache/spark/sql/hive/execution/: HiveFileFormat.scala
